--- a/style.css
+++ b/style.css
@@ -1,44 +1,31 @@
-/* The @import rule below imports the Playfair Display and Source Sans Pro fonts into the stylesheet. You don't have to edit this line.*/
+/* The @import rule below imports the Playfair Display and Source Sans Pro fonts into the stylesheet*/
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display&family=Source+Sans+Pro:wght@400&display=swap");
 
-header{
-  text-align: center;
-  width: 100%;
-}
-
-nav ul {
-  text-align:center
-}
-
-nav li{
-  display: inline;
-  padding: 10px;
-  font-size: 25px;
-  font-weight: lighter;
-}
-
 body {
+  background-color: #eae2b7;
   color: #003049;
   font-family: "Source Sans Pro", Tahoma, Geneva, Verdana, sans-serif;
-  font-weight: 600;
-  padding: 40px;
-  background-color: #eae2b7;
+  padding: 100px;
 }
 
-
-/* Set the font family for any h1, h2, or h3 heading */
-h1{
-  font-family:"Playfair Display", Times, serif;
-  font-size: 40px;
-}
-h2{
-  font-family: "Payfair Display", Times, serif;
-  font-size: 35px;
+/* Headings */
+h1, h2, h3 {
+  font-family: "Playfair Display", Times, serif;
   text-align: center;
 }
-h3 {
-  font-family: "Playfair Display", Times, serif;
-  font-size: 25px;
+
+/* Header */
+/* Header */
+header {
+  text-align: center;
+ 
+}
+
+/* Containers */
+div {
+  background-color: #eae2b7;
+  margin: auto;
+  width: 600px;
 }
 
 article {
@@ -50,48 +37,71 @@ article div {
   width: 100%;
 }
 
+
+/* Paragraphs */
 p {
   line-height: 1.5;
-  text-align: left;
 }
 
-ul li{
-  list-style-position: inside;
-  text-align: left;
+/* Links */
+a:link {
+  color: #d62828;
 }
 
-
-
-/* The div container constrains the content width within the main container to 600px */
-div {
-  margin: auto;
-  width: 600px;
+a:hover {
+  color: #f77f00;
 }
 
+nav a {
+  padding-left: 20px;
+}
+
+/* Images */
 img {
   width: 100%;
   max-width: 200px;
   height: auto;
 }
 
+.image-circle {
+  border: 2px solid #003049;
+  border-radius: 50%;
+}
+
+/* Footer */
+footer {
+  text-align: center;
+}
+
+/* Other page elements */
 hr {
   border: 1px solid black;
 }
 
-/* Add your solution below */
 
-.image-circle {
-  border-radius: 50%;
-  border: 2px solid #003049;
+.myFlex {
+  display: flex;
 }
 
-a:link    { color:  #d62828   }
-a:hover   { color: #f77f00 }
+.header {
+  display:flex;
+  justify-content: center;
+}
 
-footer{
-    display: table;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-  text
+.nav{
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.ul {
+    text-align: left;
+  }
+
+.p {
+    text-align: left;
+  }
+
+.portfolio{
+  margin: auto;
 }
