Portfolio section changes
changed portfolio caption font size and used grid css code to make the the content more uniformed

--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ hr {
   display: flex;
 }
 
+
 .header {
   display:flex;
   justify-content: center;
@@ -102,6 +103,16 @@ hr {
     text-align: left;
   }
 
-.portfolio{
-  margin: auto;
+
+.grid-container {
+  display: grid;
+  row-gap: 20px;
+  column-gap: 15px;;
+  grid-template-columns: auto auto auto;
+}
+
+.grid-item {
+  padding:10px;
+  font-size: 14px;
+  text-align: center;
 }
